--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -298,6 +298,9 @@
         <label for="Textarea">Comment</label>
         <textarea class="form-control rounded-0" id="Textarea" rows="3"></textarea>
       </div>
+      <div class="form-group col-12 col-md-8 col-lg-8 col-xl-8 mx-auto d-flex justify-content-end">
+        <button class="btn btn-primary" type="submit" value="Submit">Submit</button>
+      </div>
     </form>
   </div>
 </section>
