--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
             <!-- =========================== Footer do ============================== -->
 
-            <footer id="footer" class="bg-dark page-footer font-small blue pt-4 text-white">
+            <footer id="footer" class="page-footer font-small blue pt-4 text-white">
               <div class="container-fluid text-center text-md-left">
                 <div class="row">
                   <div class="col-12 col-md-10 col-lg-10 col-xl-10 d-flex mx-auto row ">
